--- a/Framework/Client/Include/Client.vcxproj
+++ b/Framework/Client/Include/Client.vcxproj
@@ -246,6 +246,7 @@
     <ClInclude Include="..\Header\Effect_StoneSpike.h" />
     <ClInclude Include="..\Header\Effect_StoneParticle.h" />
     <ClInclude Include="..\Header\Effect_Stun.h" />
+    <ClInclude Include="..\Header\Effect_Trail.h" />
     <ClInclude Include="..\Header\FieldObject.h" />
     <ClInclude Include="..\Header\DesertRhino.h" />
     <ClInclude Include="..\Header\Effect_MothFlyLine.h" />
@@ -505,6 +506,7 @@
     <ClCompile Include="..\Code\Effect_StoneSpike.cpp" />
     <ClCompile Include="..\Code\Effect_StoneParticle.cpp" />
     <ClCompile Include="..\Code\Effect_Stun.cpp" />
+    <ClCompile Include="..\Code\Effect_Trail.cpp" />
     <ClCompile Include="..\Code\FieldObject.cpp" />
     <ClCompile Include="..\Code\DesertRhino.cpp" />
     <ClCompile Include="..\Code\Effect_MothFlyLine.cpp" />
