--- a/Framework/Client/Include/Client.vcxproj
+++ b/Framework/Client/Include/Client.vcxproj
@@ -235,6 +235,7 @@
     <ClInclude Include="..\Header\Effect_DieSmoke.h" />
     <ClInclude Include="..\Header\Effect_Dig.h" />
     <ClInclude Include="..\Header\Effect_Explosion.h" />
+    <ClInclude Include="..\Header\Effect_EyeTrail.h" />
     <ClInclude Include="..\Header\Effect_GetItem.h" />
     <ClInclude Include="..\Header\Effect_GolemFist.h" />
     <ClInclude Include="..\Header\Effect_Hit.h" />
@@ -495,6 +496,7 @@
     <ClCompile Include="..\Code\Effect_DieSmoke.cpp" />
     <ClCompile Include="..\Code\Effect_Dig.cpp" />
     <ClCompile Include="..\Code\Effect_Explosion.cpp" />
+    <ClCompile Include="..\Code\Effect_EyeTrail.cpp" />
     <ClCompile Include="..\Code\Effect_GetItem.cpp" />
     <ClCompile Include="..\Code\Effect_GolemFist.cpp" />
     <ClCompile Include="..\Code\Effect_Hit.cpp" />
