--- a/Framework/Client/Include/Client.vcxproj
+++ b/Framework/Client/Include/Client.vcxproj
@@ -427,6 +427,7 @@
     <ClInclude Include="..\Header\UI_ItemInfo.h" />
     <ClInclude Include="..\Header\UI_LoadingBackGround.h" />
     <ClInclude Include="..\Header\UI_LoadingOgu.h" />
+    <ClInclude Include="..\Header\UI_MainLogo.h" />
     <ClInclude Include="..\Header\UI_MapName.h" />
     <ClInclude Include="..\Header\UI_MonsterHP.h" />
     <ClInclude Include="..\Header\UI_NewItem.h" />
@@ -690,6 +691,7 @@
     <ClCompile Include="..\Code\UI_ItemInfo.cpp" />
     <ClCompile Include="..\Code\UI_LoadingBackGround.cpp" />
     <ClCompile Include="..\Code\UI_LoadingOgu.cpp" />
+    <ClCompile Include="..\Code\UI_MainLogo.cpp" />
     <ClCompile Include="..\Code\UI_MapName.cpp" />
     <ClCompile Include="..\Code\UI_MonsterHP.cpp" />
     <ClCompile Include="..\Code\UI_NewItem.cpp" />
