--- a/.gitignore
+++ b/.gitignore
@@ -442,3 +442,5 @@ FodyWeavers.xsd
 # Additional files built by Visual Studio
 
 # End of https://www.toptal.com/developers/gitignore/api/visualstudio,c++
+김태원팀 역할분담.txt
+역할분배.docx
